--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,18 +18,10 @@
         <activity
             android:name=".player.ui.AudioPlayerActivity"
             android:exported="false"/>
-        <activity
-            android:name="mediateka.ui.MediatekaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".search.ui.SearchActivity"
-            android:exported="false"
-            android:windowSoftInputMode="adjustPan"/>
-        <activity
-            android:name=".settings.ui.activity.SettingsActivity"
-            android:exported="false" />
+
         <activity
             android:name=".main.ui.MainActivity"
+            android:windowSoftInputMode="adjustNothing"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
